# corpus_search

./: .clang-format  .gitignore  BUILD.md  CLAUDE.md  CMakeLists.txt  README.md  build_install.sh  codestyle.xml  main.cpp  package.json  searcher.cpp  searcher.h  utils.cpp  utils.h
.github/workflows/: cmake-single-platform.yml
cmake/: FindLLGuidance.cmake
src/: corpus_search.cpp  corpus_search.h  dfa_trie.cpp  dfa_trie.hpp  index.js  index_builder.cpp  index_builder.hpp  main.cpp  meta_utils.hpp  node_register.cpp  pg_extension.c  pg_extension.h  postgres.c  regex_ast.cpp  regex_ast.hpp  regex_dfa.cpp  regex_dfa.hpp  regex_parse.cpp  regex_parse.hpp  searcher.cpp  searcher.h  searcher.hpp  sizes.h  tokenizer.cpp  tokenizer.hpp  utils.cpp  utils.h  utils.hpp
src/extension/: build_index.c  corpus_search.cpp  corpus_search.h  corpussearch--1.0.sql  corpussearch.control  ibpe_backend.cpp  ibpe_backend.h  ibpe_build.c  ibpe_build.h  ibpe_relcache.c  ibpe_relcache.h  ibpe_scan.c  ibpe_scan.h  ibpe_utils.c  ibpe_utils.h  ibpe_vacuum.c  ibpe_vacuum.h  pg_extension.c  pg_extension.h  relcache.c
test/: cleanup_insert.sql  cleanup_vacuum.sql  test.cpp  test.hpp  test_insert.sql  test_regex.cpp  test_search.cpp  test_vacuum.sql
